<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cz.muni.fi.gag.web</groupId>
	<artifactId>gag-web-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>8</java.version>
		<version.plugin.checkstyle>2.17</version.plugin.checkstyle>
		<checkstyle.fail>false</checkstyle.fail>

		<!--keep in alphabetical order please -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<version.common-io>2.5</version.common-io>
		<version.com.fasterxml.jackson.core>2.9.8</version.com.fasterxml.jackson.core>
		<version.junit>4.11</version.junit>
		<version.maven.checkstyle.plugin>2.17</version.maven.checkstyle.plugin>
		<version.maven.compiler.plugin>3.6.1</version.maven.compiler.plugin>
		<version.maven.surefire.plugin>2.19.1</version.maven.surefire.plugin>
		<version.maven.war.plugin>3.1.0</version.maven.war.plugin>
		<version.org.hibernate.search>5.5.4.Final</version.org.hibernate.search>
		<version.org.infinispan>8.2.0.Final</version.org.infinispan>
		<version.org.jboss.arquillian>1.1.13.Final</version.org.jboss.arquillian>
		<version.org.jboss.logging>3.3.1.Final</version.org.jboss.logging>
		<version.org.jboss.logging.annotations>2.0.1.Final</version.org.jboss.logging.annotations>
		<version.org.jboss.resteasy>3.1.0.Final</version.org.jboss.resteasy>
		<version.org.jboss.shrinkwrap.resolver>2.2.2</version.org.jboss.shrinkwrap.resolver>
		<version.org.jboss.spec.jboss-javaee-7.0>1.1.0.Beta1</version.org.jboss.spec.jboss-javaee-7.0>
		<version.org.wildfly.arquillian>2.0.2.Final</version.org.wildfly.arquillian>
		<version.org.wildfly.bom>10.1.0.Final</version.org.wildfly.bom>
		<version.org.wildfly.server>10.1.0.Final</version.org.wildfly.server>
		<version.wildfly.checkstyle.config>1.0.5.Final</version.wildfly.checkstyle.config>
		<version.wildfly.maven.plugin>1.1.0.Final</version.wildfly.maven.plugin>

	</properties>

	<parent>
		<groupId>org.jboss</groupId>
		<artifactId>jboss-parent</artifactId>
		<version>16</version>
	</parent>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.wildfly.bom</groupId>
				<artifactId>wildfly-javaee7-with-tools</artifactId>
				<version>${version.org.wildfly.bom}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>${version.org.jboss.arquillian}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-search-orm</artifactId>
				<version>${version.org.hibernate.search}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${version.com.fasterxml.jackson.core}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${version.common-io}</version>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-commons</artifactId>
				<version>${version.org.infinispan}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-core</artifactId>
				<version>${version.org.infinispan}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-query</artifactId>
				<version>${version.org.infinispan}</version>
				<scope>compile</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>org.jboss.spec</groupId>
			<artifactId>jboss-javaee-7.0</artifactId>
			<version>${version.org.jboss.spec.jboss-javaee-7.0}</version>
			<type>pom</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${version.junit}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.wildfly.arquillian</groupId>
			<artifactId>wildfly-arquillian-container-managed</artifactId>
			<version>${version.org.wildfly.arquillian}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.logging</groupId>
			<artifactId>jboss-logging</artifactId>
			<version>${version.org.jboss.logging}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.logging</groupId>
			<artifactId>jboss-logging-annotations</artifactId>
			<version>${version.org.jboss.logging.annotations}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.logging</groupId>
			<artifactId>jboss-logging-processor</artifactId>
			<version>${version.org.jboss.logging.annotations}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-depchain</artifactId>
			<version>${version.org.jboss.shrinkwrap.resolver}</version>
			<scope>test</scope>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-api-maven</artifactId>
			<version>${version.org.jboss.shrinkwrap.resolver}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-jaxrs</artifactId>
			<version>${version.org.jboss.resteasy}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-multipart-provider</artifactId>
			<version>${version.org.jboss.resteasy}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-client</artifactId>
			<version>${version.org.jboss.resteasy}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.193</version>
		</dependency>
	</dependencies>

	<build>

		<pluginManagement>
			<plugins>
				<!-- workaround for broken OpenJDK 8u181-b13-2 on Debian/Ubuntu which 
					causes unit tests to fail, see https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<forkCount>3</forkCount>
						<reuseForks>true</reuseForks>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<compilerArgument>-Xlint:unchecked,deprecation</compilerArgument>
					</configuration>
				</plugin>
				<!-- embedded Tomcat 9 plugin configuration, use "mvn cargo:run" to run -->
				<plugin>
					<groupId>org.codehaus.cargo</groupId>
					<artifactId>cargo-maven2-plugin</artifactId>
					<version>1.7.0</version>
					<configuration>
						<container>
							<containerId>tomcat9x</containerId>
							<artifactInstaller>
								<groupId>org.apache.tomcat</groupId>
								<artifactId>tomcat</artifactId>
								<version>${tomcat.version}</version>
							</artifactInstaller>
						</container>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${version.plugin.checkstyle}</version>
					<executions>
						<execution>
							<id>validate</id>
							<phase>validate</phase>
							<configuration>
								<configLocation>pb162_codestyle.xml</configLocation>
								<encoding>UTF-8</encoding>
								<consoleOutput>true</consoleOutput>
								<failOnViolation>${checkstyle.failOnViolation}</failOnViolation>
								<violationSeverity>warning</violationSeverity>
								<includeTestSourceDirectory>false</includeTestSourceDirectory>
							</configuration>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

			</plugins>
		</pluginManagement>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<phase>process-sources</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configLocation>pb162_codestyle.xml</configLocation>
					<failsOnError>true</failsOnError>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<modules>
		<!-- <module>api</module> <module>dao</module> <module>services-and-facades</module> -->
		<module>app</module>
		<module>persistence</module>
	</modules>

	<repositories>
		<repository>
			<id>clojars</id>
			<name>clojars</name>
			<url>http://clojars.org/repo/</url>
		</repository>
	</repositories>
</project>
